# SimpleMapping

./: .gitignore  LICENSE  README.md
SimpleMapping/: .gitignore  CMakeLists.txt  Dependencies.md  README.md  build.sh  test.sh
SimpleMapping/Examples/Monocular-Inertial/: EuRoC.yaml  mono_inertial_euroc.cc  mono_inertial_own.cc  own.yaml
SimpleMapping/Examples/Monocular-Inertial/EuRoC_TimeStamps/: V101.txt  V102.txt  V103.txt  V201.txt  V202.txt  V203.txt
SimpleMapping/Examples/Monocular-Inertial/Own_TimeStamps/: 06-11-2022-16-59-09.txt  06-11-2022-17-00-43.txt  06-11-2022-17-04-35.txt  06-11-2022-17-09-41.txt
SimpleMapping/include/: Atlas.h  Frame.h  FrameDrawer.h  G2oTypes.h  KeyFrame.h  LocalMapping.h  Map.h  MvsBackend.h  Optimizer.h  Settings.h  System.h  Tracking.h  Viewer.h
SimpleMapping/include/utils/: MinimalImage.h  Timer.h
SimpleMapping/libdr/: .gitignore
SimpleMapping/libdr/dr_fusion/: README.md
SimpleMapping/libdr/dr_fusion/src/dr_fusion/: dr_fusion.cpp  dr_fusion.h
SimpleMapping/libdr/dr_fusion/src/marching_cubes/: mesh_extractor.cu
SimpleMapping/libdr/dr_fusion/src/tsdfvh/: tsdf_volume.cu  tsdf_volume.h
SimpleMapping/libdr/dr_mvsnet/: CMakeLists.txt  README.md
SimpleMapping/libdr/dr_mvsnet/src/: dr_mvsnet.cpp  dr_mvsnet_test.cpp
SimpleMapping/libdr/dr_mvsnet/src/dr_mvsnet/: Timer.h  dr_mvsnet.h
SimpleMapping/src/: Atlas.cc  Frame.cc  FrameDrawer.cc  G2oTypes.cc  KeyFrame.cc  LocalMapping.cc  Map.cc  MapDrawer.cc  MvsBackend.cpp  Optimizer.cc  Settings.cc  System.cc  Tracking.cc  Viewer.cc
